--- a/.github/workflows/swift-package-build.yml
+++ b/.github/workflows/swift-package-build.yml
@@ -17,4 +17,4 @@ jobs:
       run: swift --version
     - uses: actions/checkout@v3
     - name: Build
-      run: cd MDEditorLibrary && swift build -v
+      run: swift build -v
